<?xml version="1.0"?>
<package>
  <name>speedo</name>
  <version>1.0.0</version>
  <description>A simple execution time profiler for C++</description>

  <maintainer email="alexander.schaefer@informatik.uni-freiburg.de">Alexander Schaefer</maintainer>
  <author email="alexander.schaefer@informatik.uni-freiburg.de">Alexander Schaefer</author>

  <license>free</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Boost</build_depend>
  <run_depend>Boost</run_depend>

  <export>
    <build_tool>catkin</build_tool>
  </export>
</package>
