<?xml version="1.0"?>
<package>
  <name>speedo</name>
  <version>1.0.0</version>
  <description>A simple execution time profiler for C++</description>

  <maintainer email="aschaef@cs.uni-freiburg.de">Alexander Schaefer</maintainer>
  <author email="aschaef@cs.uni-freiburg.de">Alexander Schaefer</author>

  <license>free</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>

  <export>
    <build_tool>catkin</build_tool>
  </export>
</package>
